--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@main
+        with:
+            ref: ${{ github.head_ref }}
+            token: ${{ secrets.WGYTBOT }}      
       - uses: sarisia/actions-readme-feed@v1
         with:
           url: 'https://staging.wgyt.tk/feed.xml'
